Add examples of AutoNSGAIIPermutation and AutoMOEADPermutation